# learnings

./: .gitattributes  README.md  python_learnings.md  test.py
cuda/: README.md  blur.cu  learnings.md  setup.md
cuda/exercises/: ch3.cu  ch4.md  ch5.md  ch6.1
cuda/exercises/ch6/: ch6.md  ex1.cu
cuda/exercises/ch7/: ch7.md
pytorch/: README.md  pyproject.toml  requirements.txt
pytorch/assets/: fsdp_snapshot.html
pytorch/fsdp/: README.md  fsdp_v1.py  fsdp_v2.py  fsdp_v2_minimal.py  memory_snapshot.md
pytorch/fsdp/policies/: __init__.py  activation_checkpointing_functions.py  mixed_precision.py  wrapping.py
ray/: ch3.py  datasets_fast_load_from_disk.py  learnings.md  ray_in_practice.md  resources.md  setup.md  tqdm_demo.py
ray/scripts/: datasets_fast_load_from_disk.py  datasets_fast_load_from_disk_ray.py
